Fixing color contrast

--- a/src/index.css
+++ b/src/index.css
@@ -68,25 +68,3 @@ button{
     }
   }
 }
-
-section.rounded-3xl.bg-white,
-.bg-white {
-  background: rgba(255, 255, 255, 0.85) !important;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-}
-
-.dark section.rounded-3xl.bg-white,
-.dark .bg-white {
-  background: rgba(100, 73, 4, 0.85) !important;
-}
-
-footer.bg-white {
-  background: rgba(255, 255, 255, 0.85) !important;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-}
-
-.dark footer.bg-white {
-  background: rgba(100, 73, 4, 0.85) !important;
-}
